Fix asset paths and add .nojekyll files for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="./favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lennert Bikes - Thessaloniki to Ararat</title>
     <meta name="description" content="Follow Lennert's bike journey from Thessaloniki to Ararat and sponsor per 100km to help Kurdish rebuilding after the earthquake.">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html> 
