Update asset paths in vite.config.js, index.html, and deploy.yml for consistent deployment on GitHub Pages. Remove unused JavaScript and CSS files to streamline project resources and improve overall efficiency.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Redirecting to Lennert Bikes</title>
-  <meta http-equiv="refresh" content="0; url=/lennert-bikes/">
+  <!-- <meta http-equiv="refresh" content="0; url=/lennert-bikes/"> -->
 </head>
 <body>
   If you are not redirected automatically, <a href="/lennert-bikes/">click here</a>.
